feat: add progress feature
